--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="assets/css/output.css" />
   </head>
   <body>
-    <div class="flex flex-col justify-center items-center w-full h-full px-2">
-      <h1 class="text-4xl text-black font-bold">
+    <div class="flex flex-col items-center justify-center w-full h-full px-2">
+      <div id="loading" class="fixed inset-0 flex items-center justify-center bg-white z-[99999]">
+        <span class="h-20 border-4 rounded-full min-w-20 border-t-black animate-spin"></span>
+      </div>
+      <h1 class="text-4xl font-bold text-black">
         Pose Pre Wedding : Reusmana & Elisa
       </h1>
       <div>
         <div
           id="pose"
-          class="flex flex-wrap gap-2 justify-center items-center py-10"
+          class="flex flex-wrap items-center justify-center gap-2 py-10"
         ></div>
       </div>
     </div>
